# Deep-Learning-for-Computer-Vision-Assignment-1

./: .gitignore  README.md  eval.py  model_config.json  model_weights.pkl  train.py
cpp_backend/: CMakeLists.txt  bindings.cpp  bindings.exp  bindings.lib  layers.cpp  layers.h  loss.cpp  loss.h  main.cpp  ops.cpp  ops.h  optim.cpp  optim.h  stats.cpp  stats.h  tensor.cpp  tensor.h
data/: dataloader.py  dataset.py
models/: cnn.py
